--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -1,27 +1,39 @@
-body {
-  /* background-image: url("https://picsum.photos/id/1050/10"); */
+header {
+  height: 150px;
+  background-image: repeating-linear-gradient(
+      135deg,
+      rgb(0, 0, 0) 0px,
+      rgb(0, 0, 0) 10px,
+      transparent 10px,
+      transparent 11px
+    ),
+    repeating-linear-gradient(
+      22.5deg,
+      rgb(0, 0, 0) 0px,
+      rgb(0, 0, 0) 10px,
+      transparent 10px,
+      transparent 11px
+    ),
+    linear-gradient(
+      90deg,
+      hsl(194, 74%, 56%),
+      hsl(266, 74%, 56%),
+      hsl(338, 74%, 56%),
+      hsl(50, 74%, 56%),
+      hsl(122, 74%, 56%)
+    );
 }
 
-.background {
-  width: 800px;
-  height: 800px;
-  /* outline: 2px dashed #f22; */
-  border: 5px solid;
-  /* background-color: rgb(10, 20, 30); */
-  /* background-image: url("https://picsum.photos/id/1050/1200");
-  background-repeat: no-repeat; */
-  /* background-repeat: repeat-y; */
-  /* first value is x and second is y */
-  /* background-position: 200px 300px; */
-  /* background-position: center; */
-  /* background-size: contain; */
-  /* background-size: cover; */
-/* 
-  background: linear-gradient(black 30%, yellow 30%, yellow 50%, red 50%, orange 70%, orange 80%, green 95%, green 100%); */
-  background: radial-gradient(#aaa, #373434);
+img {
+  /* height: 100px; */
+  /* width: 300px;
+    height: 100px;
+    object-fit: cover;
+    object-position: center; */
 }
 
-.gradient {
-    background: linear-gradient(rgba(255,255,255, 0.5), rgba(255,255,255, 0.5)), url("https://picsum.photos/id/1043/2550/1400") center no-repeat;
-    height: 100%;
+img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
 }
