--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -1,39 +1,5 @@
-header {
-  height: 150px;
-  background-image: repeating-linear-gradient(
-      135deg,
-      rgb(0, 0, 0) 0px,
-      rgb(0, 0, 0) 10px,
-      transparent 10px,
-      transparent 11px
-    ),
-    repeating-linear-gradient(
-      22.5deg,
-      rgb(0, 0, 0) 0px,
-      rgb(0, 0, 0) 10px,
-      transparent 10px,
-      transparent 11px
-    ),
-    linear-gradient(
-      90deg,
-      hsl(194, 74%, 56%),
-      hsl(266, 74%, 56%),
-      hsl(338, 74%, 56%),
-      hsl(50, 74%, 56%),
-      hsl(122, 74%, 56%)
-    );
-}
-
-img {
-  /* height: 100px; */
-  /* width: 300px;
-    height: 100px;
-    object-fit: cover;
-    object-position: center; */
-}
-
-img {
-  width: 100%;
-  height: 400px;
-  object-fit: cover;
+.🍊 {
+    background-image: url("https://picsum.photos/id/1055/500");
+    width: 500px;
+    height: 500px;
 }
